src/views/about-us.css
/* Default styles for larger screens */
.frame {
  height: 30%;
  margin-left: 30%;
  width: 100%;
  display: flex;
  justify-content: center;
}

.frame .group2 {
  height: 652px;
  position: relative;
  top: 50px;
  width: 100%;
  display: flex;
  justify-content: center;
}

.frame .overlap-group2 {
  background-color: #00000033;
  border: 1px solid #cccccc;
  border-radius: 63px;
  box-shadow: 0px 0px 29px -13px #ffffff;
  height: 569px;
  position: relative;
  top: -1px;
  width: 1349px;
  transition: box-shadow 0.3s ease;
}

.frame .overlap-group2:hover {
  box-shadow: 0px 0px 30px -5px #fd6e00;
}

.frame .genai-short-for {
  color: #ffffff;
  font-family: "Manrope-Thin", Helvetica;
  font-size: 20px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  text-align: justify;
  left: 30%;
  top: 30%;
  width: 823px;
}

.container {
  position: absolute;
  top: 10%;
  left: 23%;
  width: 50%;
}

.text {
  display: inline;
  width: 100%;
}

.read-or-hide {
  color: #c0c0c0;
  cursor: pointer;
}

.frame .ellipse {
  background-color: #d9d9d9;
  border-radius: 160px;
  height: 320px;
  position: absolute;
  top: 166px;
  width: 320px;
}

.frame .heading2 {
  -webkit-background-clip: text !important;
  -webkit-text-fill-color: transparent;
  background: linear-gradient(
    90deg,
    rgb(133, 31, 242) 0%,
    rgb(250, 128, 62) 100%
  );
  background-clip: text;
  color: transparent;
  font-family: "Montserrat", sans-serif;
  font-size: 60px;
  font-weight: 800;
  letter-spacing: -2.48px;
  line-height: 75px;
  position: absolute;
  top: 9px;
}

/* Media query for smaller screens (adjust breakpoints as needed) */
@media screen and (max-width: 768px) {
  .frame {
    flex-direction: column;
    align-items: center;
    height: 200%;
    left: auto;
  }

  .frame .heading2 {
    -webkit-background-clip: text !important;
    -webkit-text-fill-color: transparent;
    background: linear-gradient(
      90deg,
      rgb(144, 40, 255) 0%,
      rgb(255, 98, 14) 100%
    );
    background-clip: text;
    -webkit-animation: fadein 2s;
    width: fit-content;
    color: transparent;
    font-family: "Manrope-SemiBold", Helvetica;
    font-size: 36px;
    font-weight: 600;
    left: 40%;
    text-align: center;
    letter-spacing: -1.44px;
    line-height: 75px;
    display: flex;
    justify-content: center;
    top: 0;
    white-space: nowrap;
    flex-direction: row;
    flex-wrap: nowrap;
  }

  .frame .genai-short-for {
    width: 50%;
    left: 40%;
    top: 15%;
  }

  .frame .ellipse {
    top: 25%;
    left: 10%;
    height: 30%;
    width: 22%;
  }
}

